examples/gosample/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.simple.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gosample
            port:
              number: 3000
